# kira

./: .SRCINFO  .gitignore  Makefile  PKGBUILD  README.md  kira-0.1.0.r2.gd73847d-1-any.pkg.tar.zst  pyproject.toml  requirements.txt
kira-repo/: config  packed-refs
kira-repo/objects/pack/: pack-6f3809928239f6f359fda67e044d496848e30d32.idx  pack-6f3809928239f6f359fda67e044d496848e30d32.pack  pack-6f3809928239f6f359fda67e044d496848e30d32.rev
pkg/kira/: .BUILDINFO  .MTREE  .PKGINFO
pkg/kira/usr/share/licenses/kira/: LICENSE
src/kira/: __main__.py
