[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kira"
version = "0.1.0"
authors = [
  { name="Master Kim", email="eliakimrosilarts@gmail.com" },
]
description = "kira: A specialized AI expert for Arch Linux and Hyprland"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["archlinux", "hyprland", "gemini", "ai", "assistant", "cli"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Shells",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "google-genai",
    "python-dotenv",
    "rich",
    "pyaudio",
]

[project.urls]
"Homepage" = "https://github.com/eliakimrosil/kira"
"Bug Tracker" = "https://github.com/eliakimrosil/kira/issues"

[project.scripts]
kira = "kira.__main__:main"
